--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# Environment Configuration
+# Application Configuration
 NODE_ENV=production
+APP_PORT=3001
+APP_NAME="Personal Finance Manager"
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
 
 # MariaDB Database Configuration
 DB_HOST=mariadb
@@ -9,13 +12,27 @@ DB_USER=finance_user
 DB_PASSWORD=finance_user_password_2024
 DB_ROOT_PASSWORD=rootpassword123
 DB_SSL=false
+DB_CONNECTION_LIMIT=10
 
-# Application Configuration
-APP_PORT=3000
-APP_NAME="Personal Finance Manager"
+# JWT Authentication (CHANGE THESE IN PRODUCTION!)
+JWT_SECRET=your_super_secure_jwt_secret_key_here_minimum_32_characters
+JWT_REFRESH_SECRET=your_super_secure_refresh_secret_key_here_minimum_32_characters
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
 
-# Security (CHANGE THESE IN PRODUCTION!)
-JWT_SECRET=your_jwt_secret_change_this_in_production
+# Redis Configuration
+REDIS_URL=redis://:redis_password_2024@redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=redis_password_2024
+REDIS_DB=0
+
+# Security Configuration
+BCRYPT_ROUNDS=12
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+AUTH_RATE_LIMIT_MAX=5
+STRICT_RATE_LIMIT_MAX=10
 
 # File Upload Configuration
 UPLOAD_DIR=/app/uploads
@@ -25,6 +42,32 @@ MAX_FILE_SIZE=10485760
 API_TIMEOUT=30000
 
 # Backup Configuration
-BACKUP_ENABLED=true
-BACKUP_INTERVAL=24
+BACKUP_DIR=/app/backups
 BACKUP_RETENTION_DAYS=30
+BACKUP_SCHEDULE=0 2 * * *
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_DIR=/app/logs
+LOG_MAX_SIZE=20m
+LOG_MAX_FILES=14d
+
+# Performance Configuration
+CACHE_TTL_DEFAULT=300
+CACHE_TTL_USER_DATA=600
+CACHE_TTL_STATIC=3600
+
+# Email Configuration (Optional)
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=noreply@mymoney.app
+
+# Monitoring Configuration (Optional)
+ENABLE_METRICS=true
+METRICS_PORT=9090
+
+# Development Configuration
+DEBUG=false
+ENABLE_CORS_DEBUG=false
