--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,21 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+.pnpm-debug.log*
+
+# Build outputs
+dist
+build
+.next
+out
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE and editor files
 .vscode
@@ -20,6 +35,32 @@ yarn-error.log*
 ehthumbs.db
 Thumbs.db
 
+# Git
+.git
+.gitignore
+.gitattributes
+
+# Docker
+Dockerfile*
+docker-compose*
+.dockerignore
+
+# Documentation
+README*.md
+CHANGELOG.md
+LICENSE
+docs/
+
+# Testing
+coverage/
+.nyc_output
+.jest
+test/
+tests/
+__tests__/
+*.test.*
+*.spec.*
+
 # Logs
 logs
 *.log
@@ -30,33 +71,24 @@ pids
 *.seed
 *.pid.lock
 
-# Git
-.git
-.gitignore
-
-# Docker
-Dockerfile
-.dockerignore
-docker-compose*.yml
-
-# Environment files
-.env.local
-.env.development
-.env.test
-
-# Build output
-dist
-build
-
 # Coverage directory used by tools like istanbul
-coverage
-.nyc_output
+coverage/
+*.lcov
 
 # Dependency directories
 jspm_packages/
 
 # Optional npm cache directory
 .npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
 
 # Optional REPL history
 .node_repl_history
@@ -67,17 +99,25 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# Documentation
-README.md
-docs/
-
-# Test files
-test/
-tests/
-__tests__/
-*.test.*
-*.spec.*
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
 
 # Temporary folders
 tmp/
 temp/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Local development files
+uploads/
+config/
+logs/
