--- a/.env
+++ b/.env
@@ -7,14 +7,35 @@ DB_PORT=3306
 DB_NAME=personal_finance
 DB_USER=finance_user
 DB_PASSWORD=finance_user_password_2024
+DB_ROOT_PASSWORD=rootpassword123
 DB_SSL=false
+DB_CHARSET=utf8mb4
+DB_COLLATION=utf8mb4_unicode_ci
+DB_TIMEZONE=+00:00
+DB_CONNECTION_LIMIT=10
+DB_ACQUIRE_TIMEOUT=60000
+DB_TIMEOUT=60000
 
 # Application Configuration
-APP_PORT=3000
+APP_PORT=3001
 APP_NAME="Personal Finance Manager"
 
 # Security
-JWT_SECRET=your_jwt_secret_change_this_in_production
+JWT_SECRET=your_super_secure_jwt_secret_key_here_minimum_32_characters
+JWT_REFRESH_SECRET=your_super_secure_refresh_secret_key_here_minimum_32_characters
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
+BCRYPT_ROUNDS=12
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+AUTH_RATE_LIMIT_MAX=5
+STRICT_RATE_LIMIT_MAX=10
+
+# Redis Configuration
+REDIS_URL=redis://redis:6379
+CACHE_TTL_DEFAULT=300
 
 # File Upload Configuration
 UPLOAD_DIR=/app/uploads
@@ -22,8 +43,17 @@ MAX_FILE_SIZE=10485760
 
 # API Configuration
 API_TIMEOUT=30000
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_DIR=/app/logs
 
 # Backup Configuration
 BACKUP_ENABLED=true
 BACKUP_INTERVAL=24
 BACKUP_RETENTION_DAYS=30
+BACKUP_DIR=/app/backups
+
+# Node.js Configuration
+NODE_OPTIONS=--max-old-space-size=512
