--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/server.js",
+    "server:dev": "NODE_ENV=development node server/server.js",
+    "server:prod": "NODE_ENV=production node server/server.js",
+    "start": "npm run server:prod",
+    "test": "node test-complete.js",
+    "test:verbose": "node test-complete.js --verbose",
+    "install:auto": "node install.js",
+    "setup": "npm run install:auto && npm install",
+    "health": "node -e \"require('./server/services/HealthCheckService').healthCheck.getSystemStatus().then(s => console.log(JSON.stringify(s, null, 2)))\"",
+    "db:init": "node -e \"require('./server/services/DatabaseInitService').dbInit.initialize().then(r => console.log(r))\"",
+    "db:status": "node -e \"require('./server/services/DatabaseInitService').dbInit.getStatus().then(s => console.log(JSON.stringify(s, null, 2)))\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -41,18 +51,26 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "@types/papaparse": "^5.3.16",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "input-otp": "^1.4.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
     "mysql2": "^3.15.0",
     "next-themes": "^0.3.0",
+    "node-cron": "^3.0.3",
     "papaparse": "^5.5.3",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
@@ -62,17 +80,27 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "redis": "^4.7.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "winston": "^3.17.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
+    "@types/express": "^5.0.0",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.16.5",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
