--- a/.env
+++ b/.env
@@ -34,7 +34,11 @@ AUTH_RATE_LIMIT_MAX=5
 STRICT_RATE_LIMIT_MAX=10
 
 # Redis Configuration
-REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=redis_password_2024
+REDIS_DB=0
+REDIS_URL=redis://:redis_password_2024@redis:6379
 CACHE_TTL_DEFAULT=300
 
 # File Upload Configuration
