--- a/docker-compose.unraid.yml
+++ b/docker-compose.unraid.yml
@@ -8,36 +8,24 @@ services:
       MARIADB_DATABASE: ${DB_NAME:-personal_finance}
       MARIADB_USER: ${DB_USER:-finance_user}
       MARIADB_PASSWORD: ${DB_PASSWORD:-finance_user_password_2024}
-      MARIADB_CHARSET: utf8mb4
-      MARIADB_COLLATION: utf8mb4_unicode_ci
-      MARIADB_INNODB_BUFFER_POOL_SIZE: 256M
-      MARIADB_INNODB_LOG_FILE_SIZE: 64M
-      MARIADB_MAX_CONNECTIONS: 100
-      MARIADB_QUERY_CACHE_SIZE: 32M
-      MARIADB_AUTO_UPGRADE: 1
-      MARIADB_DISABLE_UPGRADE_BACKUP: 1
+      MARIADB_CHARACTER_SET_SERVER: utf8mb4
+      MARIADB_COLLATION_SERVER: utf8mb4_unicode_ci
     volumes:
       - mariadb_data:/var/lib/mysql
-      - ./sql/init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
-      - ./sql/my.cnf:/etc/mysql/conf.d/custom.cnf:ro
-      - ./sql/backup:/backup
+      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./sql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
     ports:
       - "${DB_PORT:-3306}:3306"
     networks:
       - finance-network
     healthcheck:
-      test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD:-rootpassword123}"]
-      start_period: 60s
-      start_interval: 10s
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      start_period: 10s
+      interval: 10s
+      timeout: 5s
+      retries: 3
     security_opt:
       - no-new-privileges:true
-    read_only: false
-    tmpfs:
-      - /tmp:noexec,nosuid,size=100m
-      - /var/run/mysqld:noexec,nosuid,size=100m
     deploy:
       resources:
         limits:
@@ -48,24 +36,23 @@ services:
           cpus: '0.25'
 
   redis:
-    image: redis:7-alpine
+    image: redis:7.2-alpine
     container_name: personal-finance-redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_PASSWORD:-redis_password_2024}
+    command: redis-server --requirepass ${REDIS_PASSWORD:-redis_password_2024} --appendonly yes --appendfsync everysec
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
     volumes:
       - redis_data:/data
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
     networks:
       - finance-network
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_password_2024}", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
     security_opt:
       - no-new-privileges:true
     deploy:
@@ -80,8 +67,6 @@ services:
   app:
     image: node:20-alpine
     container_name: MyMoney
-    working_dir: /app
-    command: sh -c "npm install --production && npm start"
     restart: unless-stopped
     depends_on:
       mariadb:
@@ -95,60 +80,68 @@ services:
       - DB_NAME=${DB_NAME:-personal_finance}
       - DB_USER=${DB_USER:-finance_user}
       - DB_PASSWORD=${DB_PASSWORD:-finance_user_password_2024}
+      - DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD:-rootpassword123}
       - DB_SSL=false
+      - DB_CHARSET=utf8mb4
+      - DB_COLLATION=utf8mb4_unicode_ci
+      - DB_TIMEZONE=+00:00
+      - DB_CONNECTION_LIMIT=10
+      - DB_ACQUIRE_TIMEOUT=60000
+      - DB_TIMEOUT=60000
       - APP_PORT=${APP_PORT:-3001}
       - JWT_SECRET=${JWT_SECRET:-your_super_secure_jwt_secret_key_here_minimum_32_characters}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-your_super_secure_refresh_secret_key_here_minimum_32_characters}
       - JWT_EXPIRES_IN=15m
       - JWT_REFRESH_EXPIRES_IN=7d
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password_2024}@redis:6379
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
       - BCRYPT_ROUNDS=12
       - RATE_LIMIT_WINDOW_MS=900000
       - RATE_LIMIT_MAX_REQUESTS=100
       - AUTH_RATE_LIMIT_MAX=5
       - STRICT_RATE_LIMIT_MAX=10
-      - BACKUP_DIR=/app/backups
-      - BACKUP_RETENTION_DAYS=30
-      - LOG_LEVEL=info
-      - LOG_DIR=/app/logs
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
+      - REDIS_DB=0
+      - REDIS_URL=${REDIS_URL:-redis://:redis_password_2024@redis:6379}
       - CACHE_TTL_DEFAULT=300
-      - NODE_OPTIONS=--max-old-space-size=512
       - UPLOAD_DIR=/app/uploads
       - MAX_FILE_SIZE=10485760
       - API_TIMEOUT=30000
-      - ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:5173,http://localhost:3001}
+      - LOG_LEVEL=info
+      - LOG_DIR=/app/logs
+      - BACKUP_ENABLED=true
+      - BACKUP_INTERVAL=24
+      - BACKUP_RETENTION_DAYS=30
+      - BACKUP_DIR=/app/backups
+      - NODE_OPTIONS=--max-old-space-size=512
     ports:
       - "${APP_PORT:-3001}:3001"
-    networks:
-      - finance-network
     volumes:
       - .:/app
       - app_uploads:/app/uploads
-      - app_config:/app/config
       - app_logs:/app/logs
       - app_backups:/app/backups
+    working_dir: /app
+    command: sh -c "npm install --production && npm start"
+    networks:
+      - finance-network
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health"]
       interval: 30s
       timeout: 10s
-      retries: 5
-      start_period: 60s
+      retries: 3
+      start_period: 40s
     security_opt:
       - no-new-privileges:true
-    read_only: false
-    tmpfs:
-      - /tmp:noexec,nosuid,size=100m
     deploy:
       resources:
         limits:
+          memory: 1G
+          cpus: '1.0'
+        reservations:
           memory: 512M
           cpus: '0.5'
-        reservations:
-          memory: 256M
-          cpus: '0.25'
 
 volumes:
   mariadb_data:
@@ -156,8 +149,6 @@ volumes:
   redis_data:
     driver: local
   app_uploads:
-    driver: local
-  app_config:
     driver: local
   app_logs:
     driver: local
