--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=production
 # MariaDB Database Configuration
 DB_HOST=mariadb
 DB_PORT=3306
-DB_NAME=personal_finance
+DB_NAME=mymoney
 DB_USER=finance_user
 DB_PASSWORD=finance_user_password_2024
 DB_ROOT_PASSWORD=rootpassword123
