--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # Application Configuration
 NODE_ENV=production
 APP_PORT=3001
-APP_NAME="Personal Finance Manager"
+APP_NAME="MyMoney"
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
 
 # MariaDB Database Configuration
 DB_HOST=mariadb
 DB_PORT=3306
-DB_NAME=personal_finance
+DB_NAME=mymoney
 DB_USER=finance_user
 DB_PASSWORD=finance_user_password_2024
 DB_ROOT_PASSWORD=rootpassword123
