--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   mariadb:
     image: mariadb:11.2
-    container_name: personal-finance-db
+    container_name: mymoney-db
     restart: unless-stopped
     environment:
       MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-rootpassword123}
-      MARIADB_DATABASE: ${DB_NAME:-personal_finance}
+      MARIADB_DATABASE: ${DB_NAME:-mymoney}
       MARIADB_USER: ${DB_USER:-finance_user}
       MARIADB_PASSWORD: ${DB_PASSWORD:-finance_user_password_2024}
       MARIADB_CHARSET: utf8mb4
@@ -24,7 +24,7 @@ services:
     ports:
       - "${DB_PORT:-3306}:3306"
     networks:
-      - finance-network
+      - mymoney-network
     healthcheck:
       test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD:-rootpassword123}"]
       start_period: 60s
@@ -49,7 +49,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: personal-finance-redis
+    container_name: mymoney-redis
     restart: unless-stopped
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_PASSWORD:-redis_password_2024}
     environment:
@@ -59,7 +59,7 @@ services:
     ports:
       - "6379:6379"
     networks:
-      - finance-network
+      - mymoney-network
     healthcheck:
       test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_password_2024}", "ping"]
       interval: 30s
@@ -92,7 +92,7 @@ services:
       - NODE_ENV=production
       - DB_HOST=mariadb
       - DB_PORT=3306
-      - DB_NAME=${DB_NAME:-personal_finance}
+      - DB_NAME=${DB_NAME:-mymoney}
       - DB_USER=${DB_USER:-finance_user}
       - DB_PASSWORD=${DB_PASSWORD:-finance_user_password_2024}
       - DB_SSL=false
@@ -123,7 +123,7 @@ services:
     ports:
       - "${APP_PORT:-3001}:3001"
     networks:
-      - finance-network
+      - mymoney-network
     volumes:
       - .:/app
       - app_uploads:/app/uploads
@@ -165,5 +165,5 @@ volumes:
     driver: local
 
 networks:
-  finance-network:
+  mymoney-network:
     driver: bridge
