--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,81 +1,92 @@
 services:
-  mariadb:
-    image: mariadb:11.2
-    container_name: mymoney-db
-    restart: unless-stopped
-    environment:
-      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-rootpassword123}
-      MARIADB_DATABASE: ${DB_NAME:-mymoney}
-      MARIADB_USER: ${DB_USER:-finance_user}
-      MARIADB_PASSWORD: ${DB_PASSWORD:-finance_user_password_2024}
-      MARIADB_CHARSET: utf8mb4
-      MARIADB_COLLATION: utf8mb4_unicode_ci
-      MARIADB_INNODB_BUFFER_POOL_SIZE: 256M
-      MARIADB_INNODB_LOG_FILE_SIZE: 64M
-      MARIADB_MAX_CONNECTIONS: 100
-      MARIADB_QUERY_CACHE_SIZE: 32M
-      MARIADB_AUTO_UPGRADE: 1
-      MARIADB_DISABLE_UPGRADE_BACKUP: 1
-    volumes:
-      - mariadb_data:/var/lib/mysql
-      - ./sql/init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
-      - ./sql/my.cnf:/etc/mysql/conf.d/custom.cnf:ro
-      - ./sql/backup:/backup
-    ports:
-      - "${DB_PORT:-3306}:3306"
-    networks:
-      - mymoney-network
-    healthcheck:
-      test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD:-rootpassword123}"]
-      start_period: 60s
-      start_interval: 10s
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    security_opt:
-      - no-new-privileges:true
-    read_only: false
-    tmpfs:
-      - /tmp:noexec,nosuid,size=100m
-      - /var/run/mysqld:noexec,nosuid,size=100m
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.5'
-        reservations:
-          memory: 256M
-          cpus: '0.25'
+  # MariaDB externo - usando container existente
+  # Para usar um container MariaDB existente, descomente e configure:
+  # mariadb:
+  #   external: true
+  #   container_name: NOME_DO_SEU_CONTAINER_MARIADB_EXISTENTE
+  
+  # Configuração original do MariaDB (comentada para usar externo)
+  # mariadb:
+  #   image: mariadb:11.2
+  #   container_name: mymoney-db
+  #   restart: unless-stopped
+  #   environment:
+  #     MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-rootpassword123}
+  #     MARIADB_DATABASE: ${DB_NAME:-mymoney}
+  #     MARIADB_USER: ${DB_USER:-finance_user}
+  #     MARIADB_PASSWORD: ${DB_PASSWORD:-finance_user_password_2024}
+  #     MARIADB_CHARSET: utf8mb4
+  #     MARIADB_COLLATION: utf8mb4_unicode_ci
+  #     MARIADB_INNODB_BUFFER_POOL_SIZE: 256M
+  #     MARIADB_INNODB_LOG_FILE_SIZE: 64M
+  #     MARIADB_MAX_CONNECTIONS: 100
+  #     MARIADB_QUERY_CACHE_SIZE: 32M
+  #     MARIADB_AUTO_UPGRADE: 1
+  #     MARIADB_DISABLE_UPGRADE_BACKUP: 1
+  #   volumes:
+  #     - mariadb_data:/var/lib/mysql
+  #     - ./sql/init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
+  #     - ./sql/my.cnf:/etc/mysql/conf.d/custom.cnf:ro
+  #     - ./sql/backup:/backup
+  #   ports:
+  #     - "${DB_PORT:-3306}:3306"
+  #   networks:
+  #     - mymoney-network
+  #   healthcheck:
+  #     test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD:-rootpassword123}"]
+  #     start_period: 60s
+  #     start_interval: 10s
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 5
+  #   security_opt:
+  #     - no-new-privileges:true
+  #   read_only: false
+  #   tmpfs:
+  #     - /tmp:noexec,nosuid,size=100m
+  #     - /var/run/mysqld:noexec,nosuid,size=100m
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512M
+  #         cpus: '0.5'
+  #       reservations:
+  #         memory: 256M
+  #         cpus: '0.25'
 
-  redis:
-    image: redis:7-alpine
-    container_name: mymoney-redis
-    restart: unless-stopped
-    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_PASSWORD:-redis_password_2024}
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
-    volumes:
-      - redis_data:/data
-    ports:
-      - "6380:6379"
-    networks:
-      - mymoney-network
-    healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_password_2024}", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
-    security_opt:
-      - no-new-privileges:true
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-          cpus: '0.25'
-        reservations:
-          memory: 128M
-          cpus: '0.1'
+  # Redis externo - usando container existente
+  # Para usar um container Redis existente, configure external_links abaixo
+  
+  # Configuração original do Redis (comentada para usar externo)
+  # redis:
+  #   image: redis:7-alpine
+  #   container_name: mymoney-redis
+  #   restart: unless-stopped
+  #   command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_PASSWORD:-redis_password_2024}
+  #   environment:
+  #     - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
+  #   volumes:
+  #     - redis_data:/data
+  #   ports:
+  #     - "6380:6379"
+  #   networks:
+  #     - mymoney-network
+  #   healthcheck:
+  #     test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_password_2024}", "ping"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
+  #     start_period: 30s
+  #   security_opt:
+  #     - no-new-privileges:true
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 256M
+  #         cpus: '0.25'
+  #       reservations:
+  #         memory: 128M
+  #         cpus: '0.1'
 
   app:
     image: node:20-alpine
@@ -83,11 +94,11 @@ services:
     working_dir: /app
     command: sh -c "npm install --production && npm start"
     restart: unless-stopped
-    depends_on:
-      mariadb:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+    # depends_on: # Comentado - usando containers externos
+    #   redis:
+    #     condition: service_healthy
+    # Para usar MariaDB externo, configure DB_HOST com o nome do container existente
+    # Para usar Redis externo, configure REDIS_HOST com o nome do container existente
     environment:
       - NODE_ENV=production
       - DB_HOST=mariadb
@@ -103,7 +114,7 @@ services:
       - JWT_REFRESH_EXPIRES_IN=7d
       - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password_2024}@redis:6379
       - REDIS_HOST=redis
-      - REDIS_PORT=6379
+      - REDIS_PORT=6380
       - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
       - BCRYPT_ROUNDS=12
       - RATE_LIMIT_WINDOW_MS=900000
@@ -124,6 +135,10 @@ services:
       - "${APP_PORT:-3001}:3001"
     networks:
       - mymoney-network
+    external_links:
+      # Substitua pelos nomes reais dos seus containers existentes
+      - "NOME_CONTAINER_MARIADB:mariadb"
+      - "NOME_CONTAINER_REDIS:redis"
     volumes:
       - .:/app
       - app_uploads:/app/uploads
@@ -151,10 +166,10 @@ services:
           cpus: '0.25'
 
 volumes:
-  mariadb_data:
-    driver: local
-  redis_data:
-    driver: local
+  # mariadb_data: # Comentado - usando container MariaDB externo
+  #   driver: local
+  # redis_data: # Comentado - usando container Redis externo
+  #   driver: local
   app_uploads:
     driver: local
   app_config:
