--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # MariaDB Database Configuration
-DB_HOST=mariadb
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=mymoney
 DB_USER=finance_user
@@ -34,15 +34,15 @@ AUTH_RATE_LIMIT_MAX=5
 STRICT_RATE_LIMIT_MAX=10
 
 # Redis Configuration
-REDIS_HOST=redis
-REDIS_PORT=6380
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_PASSWORD=redis_password_2024
 REDIS_DB=0
-REDIS_URL=redis://:redis_password_2024@redis:6379
+REDIS_URL=redis://:redis_password_2024@localhost:6379
 CACHE_TTL_DEFAULT=300
 
 # File Upload Configuration
-UPLOAD_DIR=/app/uploads
+UPLOAD_DIR=./uploads
 MAX_FILE_SIZE=10485760
 
 # API Configuration
@@ -51,13 +51,13 @@ ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
 
 # Logging Configuration
 LOG_LEVEL=info
-LOG_DIR=/app/logs
+LOG_DIR=./logs
 
 # Backup Configuration
 BACKUP_ENABLED=true
 BACKUP_INTERVAL=24
 BACKUP_RETENTION_DAYS=30
-BACKUP_DIR=/app/backups
+BACKUP_DIR=./backups
 
 # Node.js Configuration
 NODE_OPTIONS=--max-old-space-size=512
