--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,119 +1,25 @@
 services:
-  # MariaDB externo - usando container existente
-  # Para usar um container MariaDB existente, descomente e configure:
-  # mariadb:
-  #   external: true
-  #   container_name: NOME_DO_SEU_CONTAINER_MARIADB_EXISTENTE
-  
-  # Configuração original do MariaDB (comentada para usar externo)
-  # mariadb:
-  #   image: mariadb:11.2
-  #   container_name: mymoney-db
-  #   restart: unless-stopped
-  #   environment:
-  #     MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-rootpassword123}
-  #     MARIADB_DATABASE: ${DB_NAME:-mymoney}
-  #     MARIADB_USER: ${DB_USER:-finance_user}
-  #     MARIADB_PASSWORD: ${DB_PASSWORD:-finance_user_password_2024}
-  #     MARIADB_CHARSET: utf8mb4
-  #     MARIADB_COLLATION: utf8mb4_unicode_ci
-  #     MARIADB_INNODB_BUFFER_POOL_SIZE: 256M
-  #     MARIADB_INNODB_LOG_FILE_SIZE: 64M
-  #     MARIADB_MAX_CONNECTIONS: 100
-  #     MARIADB_QUERY_CACHE_SIZE: 32M
-  #     MARIADB_AUTO_UPGRADE: 1
-  #     MARIADB_DISABLE_UPGRADE_BACKUP: 1
-  #   volumes:
-  #     - mariadb_data:/var/lib/mysql
-  #     - ./sql/init.sql:/docker-entrypoint-initdb.d/01-init.sql:ro
-  #     - ./sql/my.cnf:/etc/mysql/conf.d/custom.cnf:ro
-  #     - ./sql/backup:/backup
-  #   ports:
-  #     - "${DB_PORT:-3306}:3306"
-  #   networks:
-  #     - mymoney-network
-  #   healthcheck:
-  #     test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD:-rootpassword123}"]
-  #     start_period: 60s
-  #     start_interval: 10s
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
-  #   security_opt:
-  #     - no-new-privileges:true
-  #   read_only: false
-  #   tmpfs:
-  #     - /tmp:noexec,nosuid,size=100m
-  #     - /var/run/mysqld:noexec,nosuid,size=100m
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 512M
-  #         cpus: '0.5'
-  #       reservations:
-  #         memory: 256M
-  #         cpus: '0.25'
-
-  # Redis externo - usando container existente
-  # Para usar um container Redis existente, configure external_links abaixo
-  
-  # Configuração original do Redis (comentada para usar externo)
-  # redis:
-  #   image: redis:7-alpine
-  #   container_name: mymoney-redis
-  #   restart: unless-stopped
-  #   command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_PASSWORD:-redis_password_2024}
-  #   environment:
-  #     - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
-  #   volumes:
-  #     - redis_data:/data
-  #   ports:
-  #     - "6380:6379"
-  #   networks:
-  #     - mymoney-network
-  #   healthcheck:
-  #     test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redis_password_2024}", "ping"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 3
-  #     start_period: 30s
-  #   security_opt:
-  #     - no-new-privileges:true
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 256M
-  #         cpus: '0.25'
-  #       reservations:
-  #         memory: 128M
-  #         cpus: '0.1'
-
   app:
     build: .
     container_name: MyMoney
-    # restart: unless-stopped  # Comentado temporariamente para debug
-    # depends_on: # Comentado - usando containers externos
-    #   redis:
-    #     condition: service_healthy
-    # Para usar MariaDB externo, configure DB_HOST com o nome do container existente
-    # Para usar Redis externo, configure REDIS_HOST com o nome do container existente
+    restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - DB_HOST=mariadb
+      - DB_HOST=192.168.1.243
       - DB_PORT=3306
-      - DB_NAME=${DB_NAME:-mymoney}
-      - DB_USER=${DB_USER:-finance_user}
-      - DB_PASSWORD=${DB_PASSWORD:-finance_user_password_2024}
+      - DB_NAME=${DB_NAME:-finances}
+      - DB_USER=${DB_USER:-PL709}
+      - DB_PASSWORD=${DB_PASSWORD:-1Tretadepassword?}
       - DB_SSL=false
       - APP_PORT=${APP_PORT:-3001}
       - JWT_SECRET=${JWT_SECRET:-your_super_secure_jwt_secret_key_here_minimum_32_characters}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-your_super_secure_refresh_secret_key_here_minimum_32_characters}
       - JWT_EXPIRES_IN=15m
       - JWT_REFRESH_EXPIRES_IN=7d
-      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_password_2024}@redis:6379
-      - REDIS_HOST=redis
-      - REDIS_PORT=6380
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-redis_password_2024}
+      - REDIS_URL=redis://:Qwerty7890@localhost:6379
+      - REDIS_HOST=localhost
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-Qwerty7890}
       - BCRYPT_ROUNDS=12
       - RATE_LIMIT_WINDOW_MS=900000
       - RATE_LIMIT_MAX_REQUESTS=100
@@ -133,10 +39,6 @@ services:
       - "${APP_PORT:-3001}:3001"
     networks:
       - mymoney-network
-    external_links:
-      # Substitua pelos nomes reais dos seus containers existentes
-      - "NOME_CONTAINER_MARIADB:mariadb"
-      - "NOME_CONTAINER_REDIS:redis"
     volumes:
       # Removido - .:/app (estava a sobrescrever os ficheiros do container)
       - app_uploads:/app/uploads
@@ -164,10 +66,6 @@ services:
           cpus: '0.25'
 
 volumes:
-  # mariadb_data: # Comentado - usando container MariaDB externo
-  #   driver: local
-  # redis_data: # Comentado - usando container Redis externo
-  #   driver: local
   app_uploads:
     driver: local
   app_config:
