--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 NODE_ENV=production
 
 # MariaDB Database Configuration
-DB_HOST=localhost
+DB_HOST=mariadb
 DB_PORT=3306
 DB_NAME=mymoney
-DB_USER=finance_user
-DB_PASSWORD=finance_user_password_2024
+DB_USER=MyMoney
+DB_PASSWORD=1Tretadepassword?
 DB_ROOT_PASSWORD=rootpassword123
 DB_SSL=false
 DB_CHARSET=utf8mb4
