--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,7 @@ services:
       - mymoney-network
     volumes:
       - redis_data:/data
-    secrets:
-      - redis_password
-    command: sh -c 'redis-server --appendonly yes --requirepass "$$(cat /run/secrets/redis_password)"'
+    command: redis-server --appendonly yes
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
@@ -56,7 +54,6 @@ services:
       - db_password
       - jwt_secret
       - jwt_refresh_secret
-      - redis_password
     depends_on:
       redis:
         condition: service_healthy
@@ -78,7 +75,6 @@ services:
       - JWT_REFRESH_EXPIRES_IN=7d
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - REDIS_PASSWORD_FILE=/run/secrets/redis_password
       - BCRYPT_ROUNDS=12
       - RATE_LIMIT_WINDOW_MS=900000
       - RATE_LIMIT_MAX_REQUESTS=100
@@ -151,5 +147,3 @@ secrets:
     file: ./secrets/jwt_secret.txt
   jwt_refresh_secret:
     file: ./secrets/jwt_refresh_secret.txt
-  redis_password:
-    file: ./secrets/redis_password.txt
