--- a/.env
+++ b/.env
@@ -47,7 +47,7 @@ MAX_FILE_SIZE=10485760
 
 # API Configuration
 API_TIMEOUT=30000
-ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001,http://192.168.1.10:3001
 
 # Logging Configuration
 LOG_LEVEL=info
