--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST=mariadb
 DB_PORT=3306
 DB_NAME=mymoney
 DB_USER=MyMoney
-DB_PASSWORD=1Tretadepassword?
+DB_PASSWORD=MyMoney_secure_password_2024!
 DB_ROOT_PASSWORD=rootpassword123
 DB_SSL=false
 DB_CHARSET=utf8mb4
