--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # MariaDB Database Configuration
-DB_HOST=localhost
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_NAME=mymoney
 DB_USER=root
