--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3001
 DB_HOST=mariadb
 DB_PORT=3306
 DB_NAME=mymoney
-DB_USER=finance_user
-DB_PASSWORD=finance_user_password_2024
-DB_ROOT_PASSWORD=rootpassword123
+DB_USER=MyMoney
+DB_PASSWORD=ALTERE_ESTA_SENHA_SEGURA_123!
+DB_ROOT_PASSWORD=ALTERE_ESTA_SENHA_ROOT_456!
 DB_SSL=false
 DB_CONNECTION_LIMIT=10
 
@@ -21,10 +21,10 @@ JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Redis Configuration
-REDIS_URL=redis://:redis_password_2024@redis:6379
+REDIS_URL=redis://:ALTERE_ESTA_SENHA_REDIS_789!@redis:6379
 REDIS_HOST=redis
 REDIS_PORT=6380
-REDIS_PASSWORD=redis_password_2024
+REDIS_PASSWORD=ALTERE_ESTA_SENHA_REDIS_789!
 REDIS_DB=0
 
 # Security Configuration
