--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_NAME=mymoney
 DB_USER=MyMoney
-DB_PASSWORD=MyMoney_secure_password_2024!
-DB_ROOT_PASSWORD=password
+DB_PASSWORD=${DB_PASSWORD}
+DB_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
 DB_SSL=false
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
@@ -36,9 +36,9 @@ STRICT_RATE_LIMIT_MAX=10
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=redis_password_2024
+REDIS_PASSWORD=${REDIS_PASSWORD}
 REDIS_DB=0
-REDIS_URL=redis://:redis_password_2024@localhost:6379
+REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379
 CACHE_TTL_DEFAULT=300
 
 # File Upload Configuration
